--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -18,6 +18,9 @@
           <a class="nav-link" href="https://drive.google.com/file/d/1SucxkKziu1cmLq39HKg_Bk3ZlOUWgFBt/view?usp=sharing"  target="_blank">CV</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="{{ "/Publications" | relative_url }}">Publications</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{{ "/posts" | relative_url }}">Posts</a>
         </li>
         <li class="nav-item">
