--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,7 +29,7 @@ layout: default
 
         {{ content }}
 
-        <!-- Home Post List -->
+        <!-- Home Post List: USED FOR DISPLAYING RECENT POSTS...
         {% for post in site.posts limit : 5 %}
 
         <article class="post-preview">
@@ -44,15 +44,16 @@ layout: default
           <p class="post-meta">{{ post.date | date: '%B %d, %Y' }} &middot; {% include read_time.html content=post.content %}            
           </p>
         </article>
-
+        
         <hr>
-
+        
         {% endfor %}
-
-        <!-- Pager -->
+        -->
+        <!-- Pager 
         <div class="clearfix">
           <a class="btn btn-primary float-right" href="{{"/posts" | relative_url }}">View All Posts &rarr;</a>
         </div>
+        -->
 
       </div>
     </div>
